crates/phynix-parse/tests/stmt/snapshots/tests__stmt__error_span_tests__echo_missing_paren_with_space.snap
---
source: crates/phynix-parse/tests/stmt/error_span_tests.rs
assertion_line: 3
expression: "(script, diags)"
---
- items:
    - Echo:
        exprs:
          - Parenthesized:
              inner:
                StringLiteral:
                  style: DoubleQuoted
- - code:
      Parse:
        ExpectedToken:
          expected:
            - RParen
    message: "expected ')'"
    severity: Error
    span:
      start: 14
      end: 14
    labels: []
    notes: []
    help: ~
    fixes: []
