crates/phynix-parse/tests/stmt/snapshots/tests__stmt__error_span_tests__isset_missing_expr.snap
---
source: crates/phynix-parse/tests/stmt/error_span_tests.rs
assertion_line: 8
expression: "(script, diags)"
---
- items:
    - ExprStmt:
        expr:
          Isset:
            exprs:
              - VarRef:
                  name: {}
- []
